Updated primary font to Roboto. Fixed intro section overlapping text by setting line height.

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -6,5 +6,5 @@ $color-mono-secondary: #333;
 $color-mono-tertiary: #ccc;
 
 /* Fonts */
-$font-primary-sans: 'Montserrat', sans-serif;
+$font-primary-sans: "Roboto","Helvetica","Arial",sans-serif;
 $font-primary-serif: 'Arbutus Slab', serif;
